# personal-jarvis-ai-os

./: .env.example  .gitignore  agent_decomposition_review.md  jarvis_architecture_review.md  jarvis_consumer_service_review.md  jarvis_startup.bat  mobile_signal_pipeline_review.md  pyproject.toml  qualification_agent_design.md  scheduler_orchestrator_review.md  semantic_alignment_report.md  signal_intake_agent_review.md  signal_taxonomy.md  signal_understanding_design_review.md  signal_understanding_review.md  signal_understanding_validation.md  source_of_truth_review.md  test_supabase_connection.py
app/: main.py  shutdown.py  startup.py
cache/: .last_refresh  daily_brief.json  family.json  financial.json  fyi.json  health.json  school.json  todos.json  travel.json
config/: family_context.json  high_value_domains.json  jarvis_rules.json  qualification_rules.json  user_context.json
configs/: constants.py  logging.py  mailbox_registry.json  settings.py
consumer/: archive_manager.py  consumer_service.py  file_processor.py  supabase_client.py
docs/: JARVIS_ARCHITECTURAL_ANCHOR.md  ag_system_assimilation_report.md  agent_interaction_matrix.md  daily_brief_supabase_blocker_report.md  daily_brief_validation_report.md  end_to_end_validation_report.md  fact_agent_design_review.md  fact_agent_supabase_blocker_report.md  fact_agent_validation_report.md  financial_agent_validation_report.md  financial_agent_validation_report_v2.md  fyi_agent_supabase_blocker_report.md  fyi_agent_validation_report.md  jarvis_runtime_flow.md  stabilization_execution_plan.md  (+6 more)
ui/: app.py  (+3 more)
(+212 files in other folders)
