[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
